--- a/Galerkin_python.ipynb
+++ b/Galerkin_python.ipynb
@@ -90,7 +90,9 @@
    "id": "fd424ffd-44a3-4a7b-88d4-b665c49555fc",
    "metadata": {},
    "source": [
-    "## Poisson: $$-u^{\"}(x) = f(x), \\quad \\text{com} \\quad u(x_{inicial})=u(x_{final})=0.$$"
+    "### Poisson:\n",
+    "\n",
+    "$$-u^{\"}(x) = f(x), \\quad \\text{com} \\quad u(x_{inicial})=u(x_{final})=0.$$"
    ]
   },
   {
@@ -120,7 +122,6 @@
    "source": [
     "x_inicial = 0\n",
     "x_final = 1\n",
-    "num_partitions = 100\n",
     "\n",
     "basis_func_1 = lambda x: np.sin(np.pi * x) / (np.pi)**2 \n",
     "basis_func_2 = lambda x: x*(x-1)\n",
@@ -167,12 +168,64 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "9e30adf9-0427-4947-985e-b41280e2ca5b",
+   "id": "8c1fed5b-648b-47d6-9bfe-25ca4a42e5f0",
    "metadata": {},
    "source": [
-    "Preciso criar os funcionais do primeiro problema da Lista."
+    "### Exercício 1: \n",
+    "\n",
+    "Problema $V$: Encontrar $u \\in \\mathbb{V}$ tal que\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\int_0^1[u'v'+uv]\\text{dx} = \\int_0^1xv\\text{dx}, \\quad \\forall v \\in \\mathbb{V}\n",
+    "\\end{equation}\n",
+    "\n",
+    "onde $\\mathbb{V}$ é o espaço das funções diferenciáveis que satisfazem $v(0) = v(1) = 0$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3effe00e-2584-49f5-8978-2be7faf0d02e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def funcional_incognita_1(func1, func2, integration_method, x_inicial, x_final, args):\n",
+    "    integrand = lambda x: derivative(func1, x, dx=1e-4) * derivative(func2, x, dx=1e-4) + func1(x)*func2(x)\n",
+    "    return integration_method(integrand, x_inicial, x_final, args)\n",
+    "\n",
+    "def funcional_fonte_1(func, fonte, integration_method, x_inicial, x_final, args):\n",
+    "    integrand = lambda x: func(x) * fonte(x)\n",
+    "    return integration_method(integrand, x_inicial, x_final, args)\n",
+    "\n",
+    "funcionais_1 = {'funcional_incognita': funcional_incognita_1, 'funcional_fonte': funcional_fonte_1}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "261bcf98-374e-482c-affd-5f4eb3292e71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_inicial = 0\n",
+    "x_final = 1\n",
+    "\n",
+    "basis_func_1 = lambda x: x*(x-1)\n",
+    "basis_func_2 = lambda x: (x**2)*(x-1)\n",
+    "basis_func_3 = lambda x: (x**3)*(x-1)\n",
+    "\n",
+    "basis_functions = [basis_func_1, basis_func_2, basis_func_3]\n",
+    "\n",
+    "f = lambda x: x\n",
+    "\n",
+    "sol_analitica = expression = lambda x: -(np.exp(1 - x) - np.exp(1 + x) - x + np.exp(2) * x) / (1 - np.exp(2))\n",
+    "\n",
+    "coef_gaussian = galerkin_method(basis_functions, f, funcionais_1, x_inicial, x_final, gaussian_quad)\n",
+    "sol_aproximada = linear_combination_function(coef_gaussian, basis_functions)\n",
+    "\n",
+    "X = np.linspace(0,1,100)\n",
+    "plot_sol(X, sol_aproximada, sol_analitica)"
    ]
   }
  ],
